tests/ui/pattern/usefulness/slice_of_empty.exhaustive_patterns.stderr
error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/slice_of_empty.rs:20:11
   |
LL |     match nevers {
   |           ^^^^^^ pattern `&[]` not covered
   |
   = note: the matched value is of type `&[!]`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         &[_] => (),
LL ~         &[] => todo!(),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
